Image editor switches to another image when going to the texture paint workspace tab and back to layout #79355

Closed
opened 2020-07-28 23:52:28 +02:00 by Yegor · 4 comments

System Information
Operating system: Linux-5.3.0-62-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: 353e5bd749, latest 2.90, 2.79b
Worked: never

Short description of error
Using a bunch of image editor panels in the layout workspace for reference, for example, and switching to the texture paint tab for texture correction on an object changes the displayed images to the one from the texture paint tab, which brakes your workspace setup. I deliberately made four panels to show you the tediousness of the re-setuping each time you want to paint some textures.
It only occurs with a texture assigned to an object in the shader. If you delete the image node in the monkey's shader, the problem is gone, but there's no point in going to texture paint then :)
This was a long lasting inconvenience, which we can fix now at last. I render it as a bug now, as it really brakes your scene setup.

image_viewer_bug.blend

Exact steps for others to reproduce the error

  • Open the attached file. You'll see four panels with a motorcycle
  • Switch to the texture paint tab. You'll see a hexagonal texture assigned to the monkey to paint
  • Switch back to the layout tab and all four panels are now having that hexagonal texture, and you have to select the previous lovely motorcycle image once again. Imagine you have 10 panels with 10 different images.
**System Information** Operating system: Linux-5.3.0-62-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: `353e5bd749`, latest 2.90, 2.79b Worked: never **Short description of error** Using a bunch of image editor panels in the layout workspace for reference, for example, and switching to the texture paint tab for texture correction on an object changes the displayed images to the one from the texture paint tab, which brakes your workspace setup. I deliberately made four panels to show you the tediousness of the re-setuping each time you want to paint some textures. It only occurs with a texture assigned to an object in the shader. If you delete the image node in the monkey's shader, the problem is gone, but there's no point in going to texture paint then :) This was a long lasting inconvenience, which we can fix now at last. I render it as a bug now, as it really brakes your scene setup. [image_viewer_bug.blend](https://archive.blender.org/developer/F8726795/image_viewer_bug.blend) **Exact steps for others to reproduce the error** * Open the attached file. You'll see four panels with a motorcycle * Switch to the texture paint tab. You'll see a hexagonal texture assigned to the monkey to paint * Switch back to the layout tab and all four panels are now having that hexagonal texture, and you have to select the previous lovely motorcycle image once again. Imagine you have 10 panels with 10 different images.
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Author

I've got a workaround advice for this problem. We can pin the images to keep them from switching. Not very obvious though.

I've got a workaround advice for this problem. We can pin the images to keep them from switching. Not very obvious though.

This issue was referenced by 3e82500509

This issue was referenced by 3e8250050918ffb44cbe62963222d10127a97329

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-07-29 09:10:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79355
No description provided.