Fix T79355: switch to texture paint workspace changes image in other workspaces

Only automatically change image in editor to follow texture paint editors and
workspaces that are visible.