source/blender/editors/sculpt_paint/paint_image.c
@@ -1118,7 +1118,6 @@ void PAINT_OT_sample_color(wmOperatorType *ot)
 
 void ED_object_texture_paint_mode_enter_ex(Main *bmain, Scene *scene, Object *ob)
 {
-  bScreen *screen;
   Image *ima = NULL;
   ImagePaintSettings *imapaint = &scene->toolsettings->imapaint;
 
@@ -1142,17 +1141,16 @@ void ED_object_texture_paint_mode_enter_ex(Main *bmain, Scene *scene, Object *ob
   }
 
   if (ima) {
-    for (screen = bmain->screens.first; screen; screen = screen->id.next) {
-      ScrArea *area;
-      for (area = screen->areabase.first; area; area = area->next) {
-        SpaceLink *sl;
-        for (sl = area->spacedata.first; sl; sl = sl->next) {
-          if (sl->spacetype == SPACE_IMAGE) {
-            SpaceImage *sima = (SpaceImage *)sl;
+    wmWindowManager *wm = bmain->wm.first;
+    for (wmWindow *win = wm->windows.first; win; win = win->next) {
+      const bScreen *screen = WM_window_get_active_screen(win);
+      for (ScrArea *area = screen->areabase.first; area; area = area->next) {
+        SpaceLink *sl = area->spacedata.first;
+        if (sl->spacetype == SPACE_IMAGE) {
+          SpaceImage *sima = (SpaceImage *)sl;
 
-            if (!sima->pin) {
-              ED_space_image_set(bmain, sima, NULL, ima, true);
-            }
+          if (!sima->pin) {
+            ED_space_image_set(bmain, sima, NULL, ima, true);
           }
         }
       }
